Corrected content styling. Fixed main nav styling. Added more color vars for menu. Corrected layouts to reflect new content styling. added overflow: auto to site-header for mobile.

--- a/sass/layout/_content-sidebar.scss
+++ b/sass/layout/_content-sidebar.scss
@@ -7,6 +7,7 @@
 
 	.site-main {
 		margin: 0 $size__site-sidebar 0 0;
+		width: initial;
 	}
 
 	.site-content .widget-area {
