--- a/sass/layout/_sidebar-content.scss
+++ b/sass/layout/_sidebar-content.scss
@@ -7,6 +7,7 @@
 
 	.site-main {
 		margin: 0 0 0 $size__site-sidebar;
+		width: initial;
 	}
 
 	.site-content .widget-area {
