--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -1,8 +1,9 @@
 .main-navigation {
-	clear	: both;
-	display	: block;
-	float	: left;
-	width	: 100%;
+	clear			: both;
+	display			: block;
+	float			: left;
+	width			: 100%;
+	margin-bottom	: $size__default-bot-marg;
 
 	ul {
 		list-style	: none;
@@ -10,21 +11,26 @@
 		padding-left: 0;
 
 		ul {
-			box-shadow	: 0 3px 3px rgba(0, 0, 0, 0.2);
-			float		: left;
-			position	: absolute;
-			top			: 1.5em;
-			left		: -999em;
-			z-index		: 99999;
+			display		: inherit;
+			background	: $color__bg-menu-item;
 
-			ul {
-				left: -999em;
-				top	: 0;
-			}
+			@media only screen and (min-width: $bp__menu-button+1) {	
+				box-shadow	: 0 3px 3px rgba(0, 0, 0, 0.2);
+				float		: left;
+				position	: absolute;
+				top			: 2.5em;
+				left		: -999em;
+				z-index		: 99999;
 
-			li {
-				&:hover > ul {
-					left: 100%;
+				ul {
+					left: -999em;
+					top	: 0;
+				}
+
+				li {
+					&:hover > ul {
+						left: 100%;
+					}
 				}
 			}
 
@@ -37,10 +43,23 @@
 
 			a:hover {
 			}
+
+			@media only screen and (max-width: $bp__menu-button) {
+				li {
+
+					&:first-child {
+						padding-top: 1em;
+					}
+
+					&:last-child {
+						padding-bottom: 0;
+					}
+				}
+			}
 		}
 
 		li:hover > ul {
-			left: auto;
+			left: 0;
 		}
 	}
 	li {
@@ -52,16 +71,37 @@
 		}
 
 		&:hover > a {
+			color: $color__text-menu-hover;
+		}
+
+		@media only screen and (min-width: $bp__menu-button+1) {
+			&:hover > ul {
+				display: block;
+			}
 		}
 	}
 	a {
 		display			: block;
 		text-decoration	: none;
+		color 			: $color__text-menu;
 	}
 
-	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a {
+	.current_page_item,
+	.current-menu-item,
+	.current-menu-parent,
+	.current_page_ancestor {
+
+		@media only screen and (min-width: $bp__menu-button+1) {
+			background: $color__bg-menu-current;
+		}
+
+		> a {
+			color: $color__text-menu-current;
+		}
+
+		&:hover > a {
+			color: $color__text-menu-current;
+		}
 	}
 }
 
@@ -81,7 +121,7 @@
 		box-shadow		: none;
 		border-radius	: 0;
 		text-shadow		: none;
-		background		: $color__menu-button;
+		background		: $color__bg-menu-button;
 
 		&:hover {
 			border		: none;
