--- a/sass/site/global/_content.scss
+++ b/sass/site/global/_content.scss
@@ -1,4 +1,4 @@
-.content-area,
+.site-main,
 .widget-area,
 .site-footer {
 	float	: none;
