--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -8,6 +8,13 @@
 }
 
 /* Search widget */
-.widget_search .search-submit {
-	display: none;
+.widget_search {
+
+	.search-submit {
+		display: none;
+	}
+
+	.search-field {
+		width: 100%;
+	}
 }
