--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -1,10 +1,15 @@
-$color__background-body		: #fff;
+$light: #fff;
+$dark: #020202;
+
+// Backgrounds
+$color__background-body		: $light;
 $color__background-screen	: #f1f1f1;
 $color__background-hr		: #ccc;
 $color__background-button	: #e6e6e6;
 $color__background-pre		: #eee;
 $color__background-ins		: #fff9c0;
 
+// Text colors
 $color__text-screen			: #21759b;
 $color__text-input			: #666;
 $color__text-input-focus	: #111;
@@ -13,10 +18,17 @@ $color__link-visited		: purple;
 $color__link-hover			: midnightblue;
 $color__text-main			: #404040;
 
+// Border colors
 $color__border-button		: #ccc #ccc #bbb;
 $color__border-button-hover	: #ccc #bbb #aaa;
 $color__border-button-focus	: #aaa #bbb #bbb;
 $color__border-input		: #ccc;
 $color__border-abbr			: #666;
 
-$color__menu-button			: #ccc;
+// Menu colors
+$color__bg-menu-button		: #ccc;
+$color__bg-menu-item 		: #ccc;
+$color__bg-menu-current 	: darken( $color__bg-menu-item, 25% );
+$color__text-menu 			: $dark;
+$color__text-menu-current 	: $light;
+$color__text-menu-hover 	: darken( $color__bg-menu-item, 25% );
